# hs-duktape

./: .ghci  .gitignore  .gitmodules  .tool-versions  .travis.yml  LICENSE  README.md  Setup.hs  appveyor.yml  hs-duktape.cabal  stack.yaml
dukconfig/: build_dist.sh  config.yaml
test-suite/: TestCommon.hs
test-suite/Scripting/: DuktapeSpec.hs
