name:            hs-duktape
version:         0.1.5
synopsis:        Haskell bindings for a very compact embedded ECMAScript (JavaScript) engine.
category:        Web
homepage:        https://github.com/myfreeweb/hs-duktape
author:          Greg V
copyright:       2015-2017 Greg V <greg@unrelenting.technology> / 2013-2017 Duktape authors (for Duktape)
maintainer:      greg@unrelenting.technology
license:         MIT
license-file:    LICENSE
build-type:      Simple
cabal-version:   >= 1.10
extra-source-files:
    README.md
    dukconfig/dist/duktape.c
    dukconfig/dist/duktape.h
    dukconfig/dist/duk_config.h
tested-with:
    GHC == 8.2.1

source-repository head
    type: git
    location: git://github.com/myfreeweb/hs-duktape.git

library
    build-depends:
        base >= 4.3.0.0 && < 5
      , transformers
      , vector
      , unordered-containers
      , text
      , bytestring
      , aeson
    default-language: Haskell2010
    exposed-modules:
        Scripting.Duktape
        Scripting.Duktape.Raw
    ghc-options: -Wall
    hs-source-dirs: library
    include-dirs: dukconfig/dist
    c-sources: dukconfig/dist/duktape.c
    includes: duktape.h
    install-includes: duktape.h
    cc-options: -Wall -Wno-discarded-qualifiers -std=c99 -fstrict-aliasing -fomit-frame-pointer

test-suite tests
    build-depends:
        base >= 4.3.0.0 && < 5
      , text
      , bytestring
      , hspec
      , hspec-expectations-pretty-diff
      , aeson
      , aeson-qq
      , raw-strings-qq
      , template-haskell
      , hs-duktape
      , time
    default-language: Haskell2010
    ghc-options: -threaded -Wall -fhpc
    hs-source-dirs: test-suite
    main-is: Spec.hs
    other-modules:
        TestCommon
        Scripting.DuktapeSpec
    type: exitcode-stdio-1.0
